force-app/main/default/objects/PROVIDE_INF__x/PROVIDE_INF__x.object-meta.xml
<CustomObject>
    <description>PROVIDE_INF</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>PROVIDE_INF</externalName>
    <label>提供先情報</label>
</CustomObject>