force-app/main/default/objects/PROVIDE_INF__x/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <description>address</description>
    <externalDeveloperName>address</externalDeveloperName>
    <label>住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>