force-app/main/default/objects/PROVIDE_INF__x/fields/ins_src__c.field-meta.xml
<CustomField>
    <fullName>ins_src__c</fullName>
    <description>ins_src</description>
    <externalDeveloperName>ins_src</externalDeveloperName>
    <label>登録元</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>