force-app/main/default/objects/PROVIDE_INF__x/fields/pos_code__c.field-meta.xml
<CustomField>
    <fullName>pos_code__c</fullName>
    <description>pos_code</description>
    <externalDeveloperName>pos_code</externalDeveloperName>
    <label>郵便番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>