force-app/main/default/objects/PROVIDE_INF__x/fields/property_name__c.field-meta.xml
<CustomField>
    <fullName>property_name__c</fullName>
    <description>property_name</description>
    <externalDeveloperName>property_name</externalDeveloperName>
    <label>物件名称</label>
    <length>100</length>
    <type>Text</type>
</CustomField>