force-app/main/default/objects/PROVIDE_INF__x/fields/provide_inf_id__c.field-meta.xml
<CustomField>
    <fullName>provide_inf_id__c</fullName>
    <description>provide_inf_id</description>
    <externalDeveloperName>provide_inf_id</externalDeveloperName>
    <label>提供先ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>