force-app/main/default/objects/PROVIDE_INF__x/fields/service_core_id__c.field-meta.xml
<CustomField>
    <fullName>service_core_id__c</fullName>
    <description>service_core_id</description>
    <externalDeveloperName>service_core_id</externalDeveloperName>
    <label>サービスコアID</label>
    <length>36</length>
    <referenceTo>SERVICE_CORE__x</referenceTo>
    <relationshipLabel>提供先情報</relationshipLabel>
    <relationshipName>provide_infs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>